2008-02-10  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Increment version to 1.1.0
	* ijbridge.tcl: Switch to use of the digest version of the
	jabberl:iq:auth authentication protocol.

2008-01-27  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Fixed the userinfo to retrieve the users
	host info from the 311 response (FR #1727793 mjanssen)

2007-04-19  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Changed handling of NAMES reponses to
	cope with multiple lines and request op mode in the end
	of names event.

2007-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Command to get stats from bridge.
	* ijbridge.tcl: Added some bot commands for access from
	IRC. Can ask the bridge for jabber user names. Fixed receipt of
	presence information.

2007-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Added some statistics recording.

2006-11-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ibridge.tcl: Fix ircbridge nicks.

2006-10-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Added auto-op and kick support. Also whois.

2006-09-11  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Additional <iq> support.

2006-06-23  Daniel South  <wildcard_25@users.sourceforge.net>

	* ijbridge.tcl: Correct some list matching for IrcUserList.

2006-03-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Added version command.
	* ijbridge.tcl: Testing and fixes for the previous change.

2006-03-13  Daniel South  <wildcard_25@users.sourceforge.net>

	* ijbridge.tcl: Added callback facility to retrieve the list of online
	IRC users from a jabber client. Modified tracking of IRC users to be
	a little more accurate.

2005-10-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Added facility to identify with FreeNode's
	nickserv as unidentified users cannot send private
	messages. Registered ijtest and ijchain users with nickserv.