@@ -1,3 +1,8 @@
+2008-06-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* ijbridge.tcl: Listen on a localhost port for connections from
+	the paste bot and announce new pastes to the channel and muc.
+
 2008-02-10  Pat Thoyts <patthoyts@users.sourceforge.net>
 
 	* ijbridge.tcl: Increment version to 1.1.0
